--- a/app/src/main/res/layout/adapter_choose_items_list.xml
+++ b/app/src/main/res/layout/adapter_choose_items_list.xml
@@ -15,59 +15,35 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:baselineAligned="false"
         android:gravity="center_vertical">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <TextView
+            android:id="@+id/itemName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:autoSizeStepGranularity="1sp"
+            android:autoSizeMaxTextSize="18sp"
+            android:autoSizeMinTextSize="12sp"
+            android:autoSizeTextType="uniform"
+
+            android:textColor="@android:color/black"
+            tool:text="apple"
+            tool:ignore="NestedWeights,UnusedAttribute" />
+
+        <TextView
+            android:id="@+id/itemUP"
             android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="match_parent">
-
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                tool:ignore="NestedWeights">
-
-                <TextView
-                    android:id="@+id/itemName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:autoSizeStepGranularity="1sp"
-                    android:autoSizeMaxTextSize="18sp"
-                    android:autoSizeMinTextSize="12sp"
-                    android:autoSizeTextType="uniform"
-
-                    android:textColor="@android:color/black"
-                    tool:text="تفاح"
-                    tool:ignore="NestedWeights,UnusedAttribute" />
-
-                <TextView
-                    android:id="@+id/itemUP"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-
-                    android:autoSizeStepGranularity="1sp"
-                    android:autoSizeMaxTextSize="18sp"
-                    android:autoSizeMinTextSize="12sp"
-                    android:autoSizeTextType="uniform"
-                    android:gravity="end"
-
-
-                    android:textColor="@android:color/holo_green_dark"
-                    tool:text="500 $"
-                    tool:ignore="UnusedAttribute" />
-
-            </LinearLayout>
-
-
-        </LinearLayout>
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:autoSizeStepGranularity="1sp"
+            android:autoSizeMaxTextSize="18sp"
+            android:autoSizeMinTextSize="12sp"
+            android:autoSizeTextType="uniform"
+            android:gravity="end"
+            android:textColor="@android:color/holo_green_dark"
+            tool:text="500 $"
+            tool:targetApi="o" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -126,7 +102,6 @@
                 android:layout_centerInParent="true"
                 android:background="@drawable/rounded_green_background"
                 android:text="@string/add"
-                tool:text="ADD"
                 android:layout_margin="10dp"/>
 
         </RelativeLayout>
@@ -172,9 +147,10 @@
                 android:layout_height="match_parent"
                 android:textColor="@android:color/holo_green_dark"
                 android:textSize="15sp"
-                android:gravity="right|center_vertical"
-                android:layout_gravity="right|center_vertical"
-                tool:text="item" />
+                android:gravity="end|center_vertical"
+                android:layout_gravity="end|center_vertical"
+                tool:text="item"
+                tool:ignore="NestedWeights" />
 
         </LinearLayout>
 
