--- a/app/src/main/res/layout/fragment_reports_main.xml
+++ b/app/src/main/res/layout/fragment_reports_main.xml
@@ -1,82 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".feature_reports.presentation.main.ReportsMainFragment">
-
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/mainToolBar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/design_default_color_primary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
+    tools:context=".feature_reports.presentation.overview.ReportsMainFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        android:baselineAligned="false">
+        android:orientation="vertical">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/mainToolBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/design_default_color_primary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+
+        <!--number of invoices & estimates-->
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:padding="8dp"
-            android:elevation="5dp"
-            android:background="@drawable/rounded_white_background"
-            android:layout_height="match_parent"
-            android:layout_margin="16dp"
-            android:gravity="center">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:padding="8dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:textColor="@android:color/black"
-                android:text="Total Number of Invoices"/>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="16dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_white_background"
+                android:elevation="5dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="8dp">
 
-            <TextView
-                android:id="@+id/invoices_number"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:text="@string/total_number_of_invoices"
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:id="@+id/tv_invoices_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/holo_green_dark"
+                    tools:text="152" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/holo_green_dark"
-                tools:text="152"/>
+                android:layout_margin="16dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_white_background"
+                android:elevation="5dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:text="@string/total_number_of_estimates"
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:id="@+id/tv_estimates_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/holo_green_dark"
+                    tools:text="125" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <!--number of drafts & total money-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:padding="8dp">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="16dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_white_background"
+                android:elevation="5dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:text="@string/total_number_of_drafts"
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:id="@+id/tv_draft_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/holo_green_dark"
+                    tools:text="152" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="16dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_white_background"
+                android:elevation="5dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:text="@string/money_total"
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:id="@+id/tv_total_money"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/holo_green_dark"
+                    tools:text="25,000" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
 
-
+        <!--clients number-->
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:padding="8dp"
-            android:elevation="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="18dp"
             android:background="@drawable/rounded_white_background"
-            android:layout_height="match_parent"
-            android:layout_margin="16dp"
-            android:gravity="center">
+            android:elevation="5dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="8dp">
+
 
             <TextView
+                android:id="@+id/tv_clients_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:textColor="@android:color/black"
-                android:text="Total Number of Estimates"/>
-
-            <TextView
-                android:id="@+id/estimates_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:padding="16dp"
                 android:textColor="@android:color/holo_green_dark"
-                tools:text="125"/>
+                tools:text="5" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="8dp"
+                android:text="@string/clients"
+                android:textColor="@android:color/black" />
+
+            <Button
+                android:id="@+id/btn_view_clients"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:text="@string/view"
+                android:textColor="@android:color/holo_blue_dark" />
+
 
         </LinearLayout>
 
@@ -84,68 +195,4 @@
     </LinearLayout>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:padding="8dp"
-            android:elevation="5dp"
-            android:background="@drawable/rounded_white_background"
-            android:layout_height="match_parent"
-            android:layout_margin="16dp"
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:textColor="@android:color/black"
-                android:text="Total Number of Drafts"/>
-
-            <TextView
-                android:id="@+id/draft_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/holo_green_dark"
-                tools:text="152"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:padding="8dp"
-            android:elevation="5dp"
-            android:background="@drawable/rounded_white_background"
-            android:layout_height="match_parent"
-            android:layout_margin="16dp"
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:textColor="@android:color/black"
-                android:text="Money Total"/>
-
-            <TextView
-                android:id="@+id/total_money"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/holo_green_dark"
-                tools:text="25,000"/>
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-
-</LinearLayout>
+</ScrollView>
